--- a/package.json
+++ b/package.json
@@ -1,5 +1,14 @@
 {
+  "name": "excerise-09",
+  "version": "1.0.0",
   "description": "",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "devDependencies": {
     "@types/node": "^20.11.25"
   }
