--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "excerise17",
+  "name": "excerise-18",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -10,6 +9,10 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/node": "^20.11.25"
-  }
+    "@types/node": "^20.11.26"
+  },
+  "dependencies": {
+    "undici-types": "^5.26.5"
+  },
+  "description": ""
 }
